--- a/app/views/csos/_form_table_subtitle.html.erb
+++ b/app/views/csos/_form_table_subtitle.html.erb
@@ -7,7 +7,7 @@
 <thead class="language-labels">
   <tr>
     <th />
-    <th>English</th>
-    <th>Swahili</th>
+    <th><%=h _('English') %></th>
+    <th><%=h _('Swahilish') %></th>
   </tr>
 </thead>
