--- a/app/views/csos/_form_table_subtitle.html.erb
+++ b/app/views/csos/_form_table_subtitle.html.erb
@@ -8,6 +8,6 @@
   <tr>
     <th />
     <th><%=h _('English') %></th>
-    <th><%=h _('Swahilish') %></th>
+    <th><%=h _('Swahili') %></th>
   </tr>
 </thead>
