Make past-achievements table a bit prettier

--- a/app/views/csos/_form.html.erb
+++ b/app/views/csos/_form.html.erb
@@ -84,7 +84,7 @@
           <tr>
             <th rowspan="2"><%=h _('Year') %></th>
             <th colspan="2"><%=h _('Brief Description') %></th>
-            <th />
+            <th rowspan="2" />
           </tr>
           <tr>
             <th><%=h _('English') %></th>
