--- a/public/stylesheets/ngodb.css
+++ b/public/stylesheets/ngodb.css
@@ -328,6 +328,15 @@ table.cso p {
   padding: 0;
 }
 
+table.cso table.past-achievements {
+  width: 100%;
+}
+
+table.cso table.past-achievements th {
+  text-align: center;
+  vertical-align: middle;
+}
+
 table.links {
   margin: 1em auto;
   margin-top: 0.5em;
